--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=PHF7IQJeBHe6fMYDONLwclD9qcjhMSqKGc2pPPFnDFg=
+APP_KEY=base64:JYcsO1oYpXFWZpQnxl9SceHf3CIjHgCTnLNYe7CmPfA=
 APP_DEBUG=true
 APP_URL=http://localhost
 
