--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-APP_NAME=Laravel
-APP_ENV=local
+APP_NAME=afternoon-harbor-12064
+APP_ENV= production
 APP_KEY=base64:JYcsO1oYpXFWZpQnxl9SceHf3CIjHgCTnLNYe7CmPfA=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://afternoon-harbor-12064.herokuapp.com/
 
 LOG_CHANNEL=stack
 
