--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
         "vue-swipeable-bottom-sheet": "0.0.5",
         "vue-upload-multiple-image": "^1.1.6",
         "vuex": "^3.5.1"
-    }
+    },
+    "engines": { 
+        "node": "14.17.1" 
+      } 
 }
