--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "vuex": "^3.5.1"
     },
     "engines": { 
-        "node": "4.1.1" 
+        "node": "14.17.1",
+        "npm": "8.1.1"
       } 
 }
